...
                        <connections>
                            <outlet property="dataSource" destination="EEc-5w-KGN" id="mcK-Nn-nPA"/>
                            <outlet property="delegate" destination="EEc-5w-KGN" id="OKS-ld-V20"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Popular Movies" id="wji-Iy-uGO">
                        <barButtonItem key="backBarButtonItem" title="Popular" id="32k-Bl-q02"/>
                        <barButtonItem key="leftBarButtonItem" title="Filter" id="T8y-b3-PdR">
                            <connections>
                                <segue destination="Qes-Dp-btk" kind="show" identifier="ShowFilter" id="ghd-Nf-znG"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
                                                <constraint firstAttribute="width" constant="112" id="JW9-JP-ZWa"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1890" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1K-F1-nJi">
                                            <rect key="frame" x="128" y="14" width="184" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
...
                                                <constraint firstAttribute="width" constant="112" id="HHW-RJ-Bwk"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZxK-t1-VyS">
                                            <rect key="frame" x="128" y="14" width="184" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
...
